// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search By Title Controller Snapshot Tests for find posts successfully. 1`] = `
{
  "body": {
    "data": {
      "currentPage": 1,
      "data": [
        {
          "author": "123",
          "title": "React Guide",
        },
        {
          "author": "123",
          "title": "Learning React",
        },
      ],
      "totalDocument": 2,
      "totalPages": 1,
    },
    "message": "Find matching data.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Search By Title Controller Snapshot Tests for no result found. 1`] = `
{
  "body": {
    "data": {
      "currentPage": 1,
      "data": [],
      "totalDocument": 0,
      "totalPages": 1,
    },
    "message": "No matching data found.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Search By Title Controller Snapshot Tests for page exceeds total pages. 1`] = `
{
  "body": {
    "message": "Page exceeds total pages",
    "success": false,
    "totalPages": 2,
  },
  "status": 400,
}
`;

exports[`Search By Title Controller Snapshot Tests for search text missing. 1`] = `
{
  "body": {
    "message": "Search text is required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Search By Title Controller Snapshot Tests for should handle server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while searching post.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Search By Title Controller Snapshot Tests for userId missing. 1`] = `
{
  "body": {
    "message": "UserId is required.",
    "success": false,
  },
  "status": 400,
}
`;
